k8s/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: st-josephs-demo-ingress
#   namespace: st-josephs-demo
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
#     cert-manager.io/cluster-issuer: "letsencrypt-prod"
#     nginx.ingress.kubernetes.io/ssl-redirect: "true"
# spec:
#   tls:
#   - hosts:
#     - demo.init0xff.com
#     secretName: st-josephs-demo-tls
#   rules:
#   - host: demo.init0xff.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: st-josephs-demo-service
#             port:
#               number: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: st-josephs-demo-ingress
  namespace: st-josephs-demo
  labels:
    app: uptime
spec:
  rules:
  - host: demo.init0xff.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: st-josephs-demo-service
            port:
              number: 80
